--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
     "name": "laravel-admin-ext/cropper",
-    "description": "Integrate Cropper into laravel-admin",
+    "description": "Integrate Cropper into laravel-admin with Translation to English",
     "type": "library",
     "keywords": ["laravel-admin", "extension","cropper","image"],
     "homepage": "https://github.com/laravel-admin-extensions/cropper",
