--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,7 @@
     "description": "Integrate Cropper into laravel-admin with Translation to English",
     "type": "library",
     "keywords": ["laravel-admin", "extension","cropper","image"],
-    "homepage": "https://github.com/laravel-admin-extensions/cropper",
+    "homepage": "https://github.com/bayuly94/cropper",
     "license": "MIT",
     "authors": [
         {
